Android Lint Empfehlungen umgesetzt